testsuite/poke.pkl/promo-array-scons-diag-1.pk
/* { dg-do compile } */

type Foo = struct { int n; byte[3] d; };

var f = Foo { d = [1UB] }; /* { dg-error "invalid.*\n.*expected" } */
